--- a/Login/Login/Login.csproj
+++ b/Login/Login/Login.csproj
@@ -65,16 +65,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AdminForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AdminForm.Designer.cs">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AgregarPerfilForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AgregarPerfilForm.Designer.cs">
+      <DependentUpon>AgregarPerfilForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BuscarPerfilForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BuscarPerfilForm.Designer.cs">
+      <DependentUpon>BuscarPerfilForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditarPerfilForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarPerfilForm.Designer.cs">
+      <DependentUpon>EditarPerfilForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -95,7 +119,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="usuarios.db" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
