--- a/Login/Login/Login.csproj
+++ b/Login/Login/Login.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeguridadHelper.cs" />
     <Compile Include="UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
