--- a/Login/LoginNET8/LoginNET8.csproj
+++ b/Login/LoginNET8/LoginNET8.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>f5f2e27f-680d-4d9a-965e-e007419c6de6</UserSecretsId>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
